--- a/PratikumPlatform1/PratikumPlatform1.html
+++ b/PratikumPlatform1/PratikumPlatform1.html
@@ -2,16 +2,24 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Jadwal Harian</title> 
+  <title>Jadwal Akhir Pekanku</title>
+  <link rel="icon" type="png" href="https://wallpapercave.com/uwp/uwp3926882.png">
   <style>
     body {
       font-family: Arial, sans-serif;
       max-width: 800px;
       margin: 0 auto;
+      text-align: center;
+      background-image: url('wp8288009-calm-winter-wallpapers.jpg'); 
+      background-size: cover; 
+      background-position: center; 
+      color: #fff; 
     }
     table {
-      width: 100%;
+      width: 80%; 
+      margin: 0 auto; 
       border-collapse: collapse;
+      color: #4e0e0e; 
     }
     th, td {
       border: 2px solid #b58282;
@@ -23,12 +31,17 @@
       color: #fff;
     }
     tr:nth-child(even) {
-      background-color: #f2f2f2;
+      background-color: #6a72ad;
     }
+    tr {
+      background-color: #5a738c;
+    }
+    
   </style>
 </head>
 <body>
-  <h1>Jadwal Harian</h1>
+  <img src="https://wallpapercave.com/uwp/uwp3926882.png" alt="Logo" style="width: 150px; height: 150px; margin-top: 20px;">
+  <h1 style="background-color: #8f87bd;">Jadwal Akhir Pekan</h1>
   <table>
     <thead>
       <tr>
